--- a/esculapio/pom.xml
+++ b/esculapio/pom.xml
@@ -217,7 +217,7 @@
       </properties>
     </developer>
   </developers>
-  <name>Esculápio</name>
+  <name>Esculápio 2</name>
   <description>Sistema para o controle de emissão de guias de encaminhamento hospitalares, baseado no padrão TISS. Controle de beneficiários, profissionais de saúde, organizações conveniadas de saúde e procedimentos médicos com o código TUSS.</description>
 </project>
 
